RESOLVED FIXED184851
NULL dereference crash sometimes under [super initWithCoder:] in WebView
https://bugs.webkit.org/show_bug.cgi?id=184851
Summary NULL dereference crash sometimes under [super initWithCoder:] in WebView
Timothy Hatcher
Reported 2018-04-20 16:47:34 PDT
Attachments
Patch (3.70 KB, patch)
2018-04-20 16:51 PDT, Timothy Hatcher
no flags
Timothy Hatcher
Comment 1 2018-04-20 16:51:09 PDT
WebKit Commit Bot
Comment 2 2018-04-20 23:16:34 PDT
Comment on attachment 338490 [details] Patch Clearing flags on attachment: 338490 Committed r230884: <https://trac.webkit.org/changeset/230884>
WebKit Commit Bot
Comment 3 2018-04-20 23:16:35 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.